fix: resolve SonarQube code quality issues
- Replace deprecated dataFetcher() with GraphQLCodeRegistry in SchemaBuilder
- Replace deprecated newDataLoader() with DataLoaderFactory.newDataLoader()
- Convert lambdas to method references in security configs
- Replace unnamed catch variables with underscore pattern (Java 22)
- Use AssertJ best practices: containsEntry(), isZero(), hasToString()
- Join consecutive assertions into fluent chains
- Remove unused exception variables
- Add @SuppressWarnings for false positive path delimiter warnings